# names

./: .gitignore  .oxfmtrc.json  .oxlintrc.json  .rumdl.toml  CLAUDE.md  README.md  VERIFICATION_REPORT.md  index.html  mise.toml  names.py  names_model.py  names_operations.py  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.app.json  vite.config.ts
.github/workflows/: deploy.yaml
.serena/: project.yml
.serena/memories/: codebase_structure.md  project_overview.md  style_and_conventions.md  suggested_commands.md  task_completion_checklist.md
babynames1996to2024/: Cover Sheet.csv  Notes.csv
scripts/: process-names-data.ts
src/: App.vue  env.d.ts  main.ts  style.css
src/components/: app-layout.vue  breadcrumb-nav.vue  chart-container.vue  name-search.vue  name-stats-table.vue  names-table.vue  score-slider.vue
src/composables/: useNamesData.ts
src/models/: types.ts
src/pages/: name-lookup-page.vue  name-year-page.vue  nearest-page.vue  popular-page.vue  score-page.vue  stats-page.vue
src/router/: index.ts
src/utils/: calculations.ts  concentration.ts  formatters.ts
